<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/rv_detail"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cl_status"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">
            <Spinner
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@id/btn_update"
                app:layout_constraintBottom_toBottomOf="@id/btn_update"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/button_unselected"
                android:id="@+id/spinner_status"
                app:layout_constraintEnd_toStartOf="@id/btn_update"
                android:layout_marginEnd="8dp"

                android:paddingHorizontal="24dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/layout_bg"
                android:text="@string/update"
                android:id="@+id/btn_update"
                android:paddingHorizontal="24dp"
                android:paddingVertical="4dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cl_payment"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingVertical="24dp">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/metode_pembayaran"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/spinner_metode"
                android:id="@+id/txt_metode"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingHorizontal="24dp"
                android:id="@+id/spinner_metode"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/button_unselected"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/jumlah_pesanan"
                app:layout_constraintTop_toBottomOf="@id/txt_metode"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/txt_jumlah"
                app:layout_constraintEnd_toStartOf="@id/txt_dyn_jumlah"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="2 item"
                app:layout_constraintTop_toBottomOf="@id/txt_metode"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/txt_dyn_jumlah"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/txt_jumlah"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/subtotal_pesanan"
                app:layout_constraintTop_toBottomOf="@id/txt_jumlah"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/txt_sub"
                app:layout_constraintEnd_toStartOf="@id/txt_dyn_sub"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="34.000"
                app:layout_constraintTop_toBottomOf="@id/txt_dyn_jumlah"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/txt_dyn_sub"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/txt_sub"/>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/txt_sub"
                android:layout_marginTop="12dp"
                android:id="@+id/div_metode"
                android:layout_marginHorizontal="12dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:layout_marginTop="12dp"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/div_metode"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/txt_total"
                app:layout_constraintEnd_toStartOf="@id/txt_dyn_total"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="34.000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/div_metode"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/txt_dyn_total"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@id/txt_total"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_finish"
                android:text="@string/selesaikan_pesanan"
                android:background="@drawable/layout_bg"
                app:layout_constraintTop_toBottomOf="@id/txt_total"
                android:layout_marginTop="12dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>