<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    app:cardCornerRadius="2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Indomie Goreng"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cl_tambah"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp"
            android:maxLines="1"
            android:textStyle="bold"
            android:id="@+id/items_menunama"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="18.000"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cl_tambah"
            android:textColor="@color/black"
            android:maxLines="1"
            android:layout_marginEnd="8dp"
            android:id="@+id/items_menuharga"
            app:layout_constraintTop_toBottomOf="@id/items_menunama"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cl_tambah"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/batalkan"
                android:background="@drawable/layout_bg"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingHorizontal="18dp"
                android:paddingVertical="0dp"
                android:textSize="12sp"
                android:id="@+id/items_toggle"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cl_manage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:text="@string/minus"
                android:background="@drawable/button_unselected"
                android:textColor="#7899CA"
                app:layout_constraintTop_toTopOf="@id/items_stok"
                app:layout_constraintBottom_toBottomOf="@id/items_stok"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="12sp"
                android:id="@+id/items_subtract"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/items_subtract"
                tools:text="4"
                android:textSize="36sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                android:id="@+id/items_stok"
                android:layout_marginStart="12dp"/>
            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:text="@string/plus"
                android:background="@drawable/button_unselected"
                android:textColor="#7899CA"
                android:layout_marginStart="12dp"
                app:layout_constraintTop_toTopOf="@id/items_stok"
                app:layout_constraintBottom_toBottomOf="@id/items_stok"
                app:layout_constraintStart_toEndOf="@id/items_stok"
                android:textSize="12sp"
                android:id="@+id/items_add"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>